--- a/situated_data_vis.ipynb
+++ b/situated_data_vis.ipynb
@@ -175264,7 +175264,7 @@
     "                  margin=dict(l=0, r=0, t=40, b=0))\n",
     "\n",
     "# Show the plot\n",
-    "fig.show()"
+    "fig.show(\"png\")"
    ]
   },
   {
@@ -175311,7 +175311,7 @@
     "                        radius=5,\n",
     "                        center=dict(lat=0, lon=180), zoom=0,\n",
     "                        mapbox_style=\"stamen-terrain\")\n",
-    "fig.show()\n"
+    "fig.show(\"png\")\n"
    ],
    "cell_type": "code",
    "metadata": {},
@@ -196143,7 +196143,7 @@
     "                     size='firespots', \n",
     "                     projection='stereographic')\n",
     "\n",
-    "fig.show()"
+    "fig.show(\"png\")"
    ]
   },
   {
