--- a/DSAI-Week-7-DataVisualisation.ipynb
+++ b/DSAI-Week-7-DataVisualisation.ipynb
@@ -30,15 +30,23 @@
    "source": [
     "# Data Visualisation \n",
     "\n",
-    "## Introduction\n",
+    "This week we are going to cover some tools for data visualisation, as well as some core concepts in the process of visualising data and in turn how that affects/effects what we can visualise and the limits of these tools. \n",
+    "\n",
+    "More specifically we will focus on situating our data visualisation(s). We will look at the importance of Critical Data Visualisation and how to do it.\n",
+    "\n",
+    "## The Dataset\n",
     "\n",
     "In this notebook, we will be using the Plotly library in Python to visualize fires data in the Brazilian amazon.\n",
     "\n",
-    "I have this dataset on the Brazilian amazon rainforest fires and I am using plotly (as a tool) to visualise it.\n",
+    "The version I am using is from this [Kaggle page](https://www.kaggle.com/datasets/mbogernetto/brazilian-amazon-rainforest-degradation) which also has other interesting data to explore (deforestation). This dataset is credited to INPE, [National Institute for Space Research](https://www.gov.br/inpe/pt-br). \n",
     "\n",
-    "Seeing data change over time in a simple graph can provide us with a clear and intuitive understanding of how the data is evolving and changing over time. Time series graphs, which are used to show how a variable changes over time, can help us identify patterns, trends, and relationships that may not be apparent when looking at the raw data.\n",
+    "Essentially what we have is data on amount of fire outbreaks in Brazilian Amazon by *state* (region), *month and year*, *latitude* and *longitud* from 1999 to 2019.\n",
     "\n",
-    "Let's try looking at the amount of firespots change over time.\n"
+    "The intention is to use this dataset and these features to visualise the data in a variety of ways, to explore the process of data visualisation and be critical of this process too.\n",
+    "\n",
+    "First, we are going to visualise the data over time in a simple graph that can provide us with a clear and intuitive understanding of how the data is changing over time. Time series graphs, which are used to show how a variable changes over time, can help us identify patterns, trends, and relationships that may not be apparent when looking at the raw data.\n",
+    "\n",
+    "For this, we are going to use plotly time series graph.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -5115,7 +5123,7 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "# Load the data\n",
-    "df = pd.read_csv('brazilian_amazon_fires_1999_2019.csv')\n",
+    "df = pd.read_csv('data/brazilian_amazon_fires_1999_2019.csv')\n",
     "\n",
     "# Create the plot\n",
     "fig = go.Figure()\n",
@@ -5139,7 +5147,7 @@
   },
   {
    "source": [
-    "![Fires Over Time with Plotly](plotly_scatter_plot.gif)\n"
+    "![Fires Over Time with Plotly](data/plotly_scatter_plot.gif)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -5154,7 +5162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5164,7 +5172,7 @@
     "from bokeh.models import ColumnDataSource\n",
     "\n",
     "# Load the data\n",
-    "df = pd.read_csv('brazilian_amazon_fires_1999_2019.csv')\n",
+    "df = pd.read_csv('data/brazilian_amazon_fires_1999_2019.csv')\n",
     "\n",
     "# Create a ColumnDataSource object\n",
     "source = ColumnDataSource(data=dict(year=df['year'], firespots=df['firespots']))\n",
@@ -5181,7 +5189,7 @@
    "source": [
     "**Note:** To be able to see the output and interact with it we have to run the code and this will pop up in a web browser. \n",
     "\n",
-    "![Fires Over Time with Bokeh](bokeh_plot.gif)\n"
+    "![Fires Over Time with Bokeh](data/bokeh_plot.gif)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -5190,9 +5198,11 @@
    "source": [
     "By visualizing data in this way, we can quickly identify important insights and trends, and gain a deeper understanding of the data we are working with.\n",
     "\n",
+    "From both visuals we are able to see the amount of fire outbreaks over the years, from 1999 to 2019. \n",
+    "\n",
     "But what if we want to see where, in what state (region) did they happen?\n",
     "\n",
-    "For that we could try a tool that will let us have a more comprehensive view of more data points and one that we visualise the relationships between all three variables simultaneously (year, firespots, state).\n",
+    "For that we could try a tool that will let us have a more comprehensive view of more data points and one that we visualise the relationships between all three variables simultaneously (*year, firespots, state*).\n",
     "\n",
     "A 3D scatter plot in Plotly can offer a more comprehensive view of a larger number of data points, as it allows for the visualization of three variables simultaneously."
    ],
@@ -14537,7 +14547,7 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "# Load the data\n",
-    "df = pd.read_csv('brazilian_amazon_fires_1999_2019.csv')\n",
+    "df = pd.read_csv('data/brazilian_amazon_fires_1999_2019.csv')\n",
     "\n",
     "# Create the 3D scatter plot\n",
     "fig = go.Figure(data=[go.Scatter3d(x=df['year'],\n",
@@ -14563,22 +14573,30 @@
   },
   {
    "source": [
-    "![Fires Over Time with Plotly 3D scatter plot](plotly_3d.gif)\n"
+    "![Fires Over Time with Plotly 3D scatter plot](data/plotly_3d.gif)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "In a 3D scatter plot, the x, y, and z coordinates of each data point are represented by its position in 3D space. This can help us visualize relationships between multiple variables and identify patterns that may not be visible in a 2D plot.\n",
+    "In a 3D scatter plot, the `x`, `y`, and `z` coordinates of each data point are represented by its position in 3D space. This can help us visualize relationships between multiple variables and identify patterns that may not be visible in a simple 2D plot.\n",
     "\n",
-    "The interactivity provided by Plotly can make 3D scatter plots even more useful for data analysis. Explore the 3D plot and see what it does, hover over every data point and you should see the year, number of firespots and the region in which they happened.\n",
+    "The interactivity provided by Plotly can make 3D scatter plots even more useful for data analysis. \n",
     "\n",
-    "Plotly has many built-in colorscales that you can use to customize the appearance of your data visualizations. Change the colorscales!\n",
+    "You can interact with the 3D plot and see what it does, exploring it, hovering over every data point and you should see the year, number of firespots and the region in which they happened.\n",
+    "\n",
+    "Plotly has many built-in colorscales that you can use to customize the appearance of your data visualizations. Changing the colorscale in a data visualization can be an important step in the process of creating effective and informative visualizations. One of the most powerful aspects of images is colour, which in turn transforms information into meaning. \n",
+    "\n",
+    "Some of these reasons are: \n",
+    "\n",
+    "1. Emphasize different aspects of the data: Changing the colorscale can help emphasize different aspects of the data that might be of interest to viewers. For example, a diverging colorscale might be useful for highlighting the differences between positive and negative values, while a sequential colorscale might be better for emphasizing the magnitude of values.\n",
+    "2. Improve readability: By choosing the right colorscale, you can improve the readability of a visualization. For example, if the data is displayed on a white background, a dark colorscale might be easier to read, while a light colorscale might be more suitable for a dark background.\n",
+    "3. Enhance aesthetics: Finally, changing the colorscale can be a way to enhance the aesthetics of a visualization, making it more visually appealing and engaging for viewers. A well-chosen colorscale can help make the data stand out and make the visualization more memorable.\n",
     "\n",
     "Here are some of the most commonly used colorscales in Plotly:\n",
     "    \n",
-    "    Greys\n",
+    "    `Greys\n",
     "    YlGnBu\n",
     "    Greens\n",
     "    YlOrRd\n",
@@ -14595,7 +14613,15 @@
     "    Earth\n",
     "    Electric\n",
     "    Viridis\n",
-    "    Cividis"
+    "    Cividis`\n",
+    "\n",
+    " **Task**\n",
+    "\n",
+    "The colour of the visualization could be more engaging, clearer and accesible. \n",
+    "\n",
+    "1. Read the article to find more about the misuse of color in science communication [here](https://www.nature.com/articles/s41467-020-19160-7). \n",
+    " \n",
+    "2. Explore the colorscales and apply the one that make the visual less complex, and more accessible for people with colour-vision disabilities."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -14604,7 +14630,7 @@
    "source": [
     "# Situating the Data: Critical Data Visualisation \n",
     "\n",
-    "We can go on forever and try and visualize this dataset in many other plots but I actually want to put it into context it and apply a feminist and decolonial framework.\n",
+    "We can go on forever and try and visualize this dataset in many other plots but I actually want to put it into context and apply a feminist and decolonial framework.\n",
     "\n",
     "How? \n",
     "\n",
@@ -14623,7 +14649,7 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "\n",
-    "df = pd.read_csv('brazilian_amazon_fires_1999_2019.csv')\n",
+    "df = pd.read_csv('data/brazilian_amazon_fires_1999_2019.csv')\n",
     "\n",
     "fig = px.density_mapbox(df, \n",
     "                        lat='latitude', \n",
@@ -23979,7 +24005,7 @@
   },
   {
    "source": [
-    "![Situating the fires in a map with a Plotly density mapbox](plotly_interactive_mapbox.gif)"
+    "![Situating the fires in a map with a Plotly density mapbox](data/plotly_interactive_mapbox.gif)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -24012,7 +24038,7 @@
     "\n",
     "We can then centre Indigenous communities and the environment. But how, if we don't have that data at hand?\n",
     "\n",
-    "It's time to get creative. Maybe I could do this by including photographs of the physical places when I click on a certain data point. This would situate visualisation combining physical photography and virtual data visualisation to show a particular place that is made out of a surrounding environment, with people, nature and culture.\n",
+    "It's time to get creative. So will add photographs of the physical places when I click on a certain data point. This would situate visualisation combining physical photography and virtual data visualisation to show a particular place that is made out of a surrounding environment, with people, nature and culture.\n",
     "\n",
     "**What other tools are out there to help me achieve this?** \n",
     "\n",
@@ -24022,17 +24048,97 @@
     "\n",
     "For now, I want to show things on a map or create a new map. We are doing both and we are going to use [p5.js] (https://p5js.org/).\n",
     "\n",
-    "\n"
+    "But firstly, I need to have an idea of what places I want to materialise. This is a work in progress and for now I will start with 5 places. \n",
+    "\n",
+    "* Let's find the 5 locations that have experienced the most fire outbreaks between 1999 and 2019. This involves some data analysis of the dataset.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Top 5 locations with the most fire spots:\n                       year  month  firespots\nlatitude   longitude                         \n-7.272872  -51.737227  2002      8      37926\n-11.093895 -56.204235  2004      9      24886\n-11.018350 -56.162919  2007      9      24779\n-10.646819 -55.591126  2002      8      23642\n-6.767477  -52.125310  2005      8      23635\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the CSV data into a Pandas dataframe\n",
+    "fires = pd.read_csv('data/brazilian_amazon_fires_1999_2019.csv')\n",
+    "\n",
+    "# Group the data by latitude and longitude and sum the number of fire spots for each location\n",
+    "location_counts = fires.groupby(['latitude', 'longitude']).sum()\n",
+    "\n",
+    "# Find the 5 locations with the most fire spots\n",
+    "top_locations = location_counts.nlargest(5, 'firespots')\n",
+    "\n",
+    "# Print the results\n",
+    "print('Top 5 locations with the most fire spots:')\n",
+    "print(top_locations)\n"
+   ]
+  },
+  {
+   "source": [
+    "We now have the exact coordinates which help me find some more about those places, let's do a google search and see what it tells us about every single one.\n",
+    "\n",
+    "The first one `-7.272872  -51.737227` - Aldea In digena Aukra - Ourilândia do Norte - State of Pará, Brazil\n",
+    "![aldea](data/aldeaindigenaaukra.jpg)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The second one `-11.093895 -56.204235` Itauba, Matto Grosso.\n",
+    "![Itauba](data/itauba.jpg)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "The third one `-11.018350 -56.162919` - Nova Canaã do Norte, State of Mato Grosso, 78515-000, Brazil\n",
+    "\n",
+    "![Nova](data/novacanaadenorte.jpg)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "`-10.646819 -55.591126` - Colíder - State of Mato Grosso, Brazil\n",
+    "\n",
+    "\n",
+    "![Colider](data/colider.jpg)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "`-6.767477  -52.125310` - São Félix do Xingu, State of Pará, 68380-000, Brazil with 23635 fire outbreaks.\n",
+    "\n",
+    "![saofelix](data/saofelix.jpg)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Now that we have the images, we can start pouplating our map.\n",
+    "\n",
+    "The project will be called **Amazonia: environmental ecologies of justice** and you can find it [here](https://editor.p5js.org/yadlra/sketches/mhpYfXjyB). "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
